Upgrade hydra-client to version 2.1.1